# Containers

./: CMakeLists.txt  CMakePresets.json  ContainerBenchmarker.cpp  ContainerBenchmarker.h  ContainerTests.vcxproj  Containers.filters  Containers.sln  Containers.vcxproj  HackyVector.h  Makefile  Map.h  Profiler.h  RedBlackTree.h  RedBlackTree.vcxproj  RedBlackTree.vcxproj.filters  Set.h  main.cpp
HashTables/: HashTableChained.cpp  HashTableChained.h  HashTableLinkedList.cpp  HashTableLinkedList.h  HashTableOpenAddress.cpp  HashTableOpenAddress.h  HashTables.h
LinearStorage/: Array.h  InitialiserList.h  LinearContainer.h  Memory.h  MemoryPool.h  MemorySlabbed.h  Span.h  String.h  StringView.h  Vector.h
Lists/: ListDoubleSided.cpp  ListDoubleSided.h  ListDoubleSidedTailed.cpp  ListDoubleSidedTailed.h  ListOneSided.cpp  ListOneSided.h  Lists.h
Maps/: Map.h  MapPair.cpp  MapPair.h  UnorderedMap.h
Memory/: Memory.h  MemoryPool.h  MemorySlabbed.cpp  MemorySlabbed.h
Sets/: Set.h  UnorderedSet.h
Tests/: BuddyAllocatorTests.cpp  ContainerBenchmarker.h  RunAllocatorTests.cpp  TestFramework.cpp  TestFramework.h  main.cpp
Tests/unit/: AllocatorTests.cpp  ArrayTests.cpp  SpanTests.cpp  StringTests.cpp  StringViewTests.cpp  VectorTests.cpp
Trees/: AVLTree.h  RedBlackTree.h  TreeConcept.h  Trees.h
Utilities/: Allocator.h  ByteArray.h  Concepts.h  Macros.cpp  Macros.h  UnionStorage.cpp  UnionStorage.h
deprecated/: BuddyAllocator.h
deprecated/HashTables/: HashTableOpenAddress.h  HashTables.h
include/Containers/HashTables/: HashTableChained.h  HashTableOpenAddress.h  HashTables.h
include/Containers/Lists/: BidirectionalList.h  ForwardList.h  Lists.h
include/Containers/Maps/: Map.h  MapPair.h  UnorderedMap.h
include/Containers/Math/: TensorDefinitions.h  TensorFunctions.h  Tensors.h
include/Containers/Memory/: MemoryPool.h  SharedPtr.h  UniquePtr.h  WeakPtr.h
include/Containers/Memory/DirectAccessAllocators/: BuddyAllocator.h
include/Containers/Memory/ExternalMetadataAllocators/: BuddyAllocator.h  ListAllocator.h
include/Containers/PointerStorage/: Array.h  ContainerInterfaces.h  DynamicArray.h  EnumArray.h  HeapBuffer.h  ManualVector.h  PointerContainers.h  Registry.h  Span.h  Stack.h  String.h  StringView.h  Vector.h
include/Containers/Sets/: Set.h  UnorderedSet.h
include/Containers/Trees/: RedBlackTree.h  Trees.h
include/Containers/Utilities/: Concepts.h  Optional.h  ReusableStorage.h  TemplateUnion.h
include/HashTables/: HashTableChained.h  HashTableOpenAddress.h  HashTables.h
include/LinearStorage/: Array.h  DynamicArray.h  LinearContainer.h  Span.h  String.h  Vector.h
include/Lists/: BidirectionalList.h  ForwardList.h  ListDoubleSided.h  ListDoubleSidedTailed.h  ListOneSided.h  Lists.h
include/Maps/: Map.h  MapPair.h  UnorderedMap.h
include/Memory/: MemoryPool.h  SharedPtr.h  UniquePtr.h  WeakPtr.h
include/Memory/DirectAccessAllocators/: BuddyAllocator.h  ListAllocator.h
include/Memory/ExternalMetadataAllocators/: BuddyAllocator.h  ListAllocator.h
include/PointerStorage/: Array.h  ContainerInterfaces.h  DynamicArray.h  EnumArray.h  HeapBuffer.h  ManualVector.h  PointerContainers.h  Span.h  Stack.h  String.h  StringView.h  Vector.h
include/Sets/: Set.h  UnorderedSet.h
include/Trees/: Trees.h
include/Utilities/: ByteArray.h  Concepts.h  Macros.h  TemplateUnion.h
install/: ContainersConfig.cmake.in
install/mingw-debug-static/include/PointerStorage/: DynamicArray.h  InitializerList.h
install/mingw-debug-static/include/Sets/: UnorderedSet.h
install/mingw-debug-static/include/Utilities/: Concepts.h  Templates.h
install/mingw-release-static/include/HashTables/: HashTableOpenAddress.h  HashTables.h
install/mingw-release-static/include/Lists/: Lists.h
install/mingw-release-static/include/PointerStorage/: ContainerInterfaces.h  EnumArray.h  HeapBuffer.h
install/mingw-release-static/include/Utilities/: ByteArray.h  Macros.h  UnionStorage.h
install/msvc-debug-static/include/Maps/: Map.h
install/msvc-debug-static/include/PointerStorage/: ManualVector.h  Stack.h
install/msvc-debug-static/include/Sets/: Set.h
src/: main.cpp
(+12 files in other folders)
